# dbt-scooters

./: .sqlfluff  README.md  catalog.json  data.csv  dbt_project.yml  manifest.json  profiles.example.yml  pyproject.toml
.github/workflows/: dbt_partial.yml  deploy_dbt.yml.yml  deploy_dbt_daily.yml  deploy_docs.yml
dbt_scooters.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
macros/: check_diff.sql  escape_reserved_words.sql  properties.yml  trips_age_sex_report.sql  trips_geom_stat.sql
models/: companies_trips.sql  events_clean.sql  events_full.sql  events_stat.sql  parking_finish_stat.sql  parking_start_stat.sql  properties.yml  trips_age_daily.sql  trips_age_daily_stat.sql  trips_age_group.sql  trips_geom.sql  trips_prep.sql  trips_stat.sql  trips_stat_age.sql  trips_stat_daily.sql  trips_users.sql  users_class.sql  users_class_weekly_destination_trips.sql
models/finance/: properties.yml  revenue_monthly.sql  revenue_monthly_report.sql  revenue_user_monthly.sql
seeds/: age_groups.csv  properties.yml  sample.csv
tests/: unique_key.sql.backup  unique_not_null.sql.backup
